--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -379,7 +379,7 @@ env:
 #winpty_backend: false
 
 # Send ESC (\x1b) before characters when alt is pressed.
-#alt_send_esc: true
+alt_send_esc: false
 
 #mouse:
   # Click settings
