--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -68,6 +68,8 @@ window:
   # Allow terminal applications to change Alacritty's window title.
   dynamic_title: true
 
+  #Background opacity
+  opacity: 0.95
   # Window class (Linux/BSD only):
   #class:
     # Application instance name
@@ -237,12 +239,6 @@ bell:
   #     args: ["Hello, World!"]
   #
   #command: None
-
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.95
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
