--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -104,7 +104,7 @@ font:
     family: InconsolataLGC Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
-    style: Medium
+    style: Regular
 
   # Bold font face
   bold:
@@ -156,7 +156,7 @@ font:
   #
   # Thin strokes are suitable for retina displays, but for non-retina screens
   # it is recommended to set `use_thin_strokes` to `false`.
-  use_thin_strokes: false
+  # use_thin_strokes: false
 
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
